--- a/docker/environment/nuxt.env
+++ b/docker/environment/nuxt.env
@@ -1,4 +1,8 @@
-NUXT_DJANGO_PROD_URL=example.com
+# DEBUG=false
+
+NUXT_DJANGO_DOMAIN=example.com
+
+# Stripe
 
 NUXT_STRIPE_PUBLISHABLE_KEY=
 
@@ -20,8 +24,6 @@ GOOGLE_CLIENT_ID=
 
 GOOGLE_CLIENT_SECRET=
 
-FIREBASE_API_KEY=
-
 # Facebook Pixels
 
 NUXT_PUBLIC_METAPIXEL_DEFAULT_ID=
@@ -33,3 +35,29 @@ NUXT_PUBLIC_METAPIXEL_ADS02_ID=
 #  What's App
 
 NUXT_WHATS_APP_URL=
+
+# Firebase
+
+NUXT_FIREBASE_API_KEY=
+
+NUXT_FIREBASE_AUTH_DOMAIN=example.firebaseapp.com
+
+NUXT_FIREBASE_DB_URL=https://example-default-rtdb.europe-west1.firebasedatabase.app
+
+NUXT_FIREBASE_STORAGE_BUCKET=example.firebasestorage.app
+
+NUXT_FIREBASE_APP_ID=
+
+NUXT_FIREBASE_MEASUREMENT_ID=G-ABC
+
+NUXT_FIREBASE_MESSAGE_SENDER_ID=
+
+NUXT_FIREBASE_PROJECT_ID=
+
+# Redis
+
+NUXT_REDIS_HOST=
+
+NUXT_REDIS_USERNAME=
+
+NUXT_REDIS_PASSWORD=
