Update deployment files

--- a/deploy/db/secret.yaml
+++ b/deploy/db/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: django-secret
+  name: postgres-secret
 type: Opaque
 data:
   password: <Password>
