--- a/deploy/django/prod/deployment.yaml
+++ b/deploy/django/prod/deployment.yaml
@@ -1,18 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: django-depl
+  name: django-prod
 spec:
   selector:
     matchLabels:
-      app: django-app
+      app: django
+      environment: prod
   template:
     metadata:
       labels:
-        app: django-app
+        app: django
+        environment: prod
     spec:
       containers:
-      - name: django-app
+      - name: django
         image: python:latest
         imagePullPolicy: Always
         envFrom:
