--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@nuxt/devtools": "^2.1.0",
     "@nuxt/test-utils": "^3.14.4",
     "@stripe/stripe-js": "^4.10.0",
     "@testing-library/vue": "^8.1.0",
