--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,28 @@ npm-debug.log*
 /www
 
 __pycache__/
+
+# Nuxt dev/build outputs
+.output
+.data
+.nuxt
+.nitro
+.cache
+dist
+
+# Node dependencies
+node_modules
+
+# Logs
+logs
+*.log
+
+# Misc
+.DS_Store
+.fleet
+.idea
+
+# Local env files
+.env
+.env.*
+!.env.example
