--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,19 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@unlok-co/nuxt-stripe": "^4.0.2",
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@nuxt/image": "^1.9.0",
+    "@nuxt/test-utils": "^3.15.4",
+    "@nuxtjs/google-fonts": "^3.2.0",
+    "@nuxtjs/i18n": "^9.2.0",
+    "@nuxtjs/sitemap": "^7.2.5",
+    "@pinia/nuxt": "^0.10.1",
+    "@vueuse/nuxt": "^12.7.0",
+    "vuetify-nuxt-module": "^0.18.3"
   }
 }
