--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/seo": "^2.1.1",
     "@unlok-co/nuxt-stripe": "^4.0.2",
     "nuxt": "^3.15.4",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue-sonner": "^1.3.0"
   },
   "devDependencies": {
     "@nuxt/image": "^1.9.0",
