--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,13 @@
     "@unlok-co/nuxt-stripe": "^4.0.2",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "firebase": "^11.3.1",
+    "mdb-ui-kit": "^8.2.0",
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest",
-    "vue-sonner": "^1.3.0"
+    "vue-sonner": "^1.3.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@nuxt/image": "^1.9.0",
