--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "@unlok-co/nuxt-stripe": "^4.0.2",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.13",
     "firebase": "^11.3.1",
     "mdb-ui-kit": "^8.2.0",
     "nuxt": "^3.15.4",
+    "sass-embedded": "^1.85.0",
     "vue": "latest",
     "vue-router": "latest",
     "vue-sonner": "^1.3.0",
