--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@nuxtjs/seo": "^2.1.1",
     "@unlok-co/nuxt-stripe": "^4.0.2",
+    "@vueuse/core": "^12.7.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.13",
     "firebase": "^11.3.1",
     "mdb-ui-kit": "^8.2.0",
     "nuxt": "^3.15.4",
+    "pinia": "^3.0.1",
     "sass-embedded": "^1.85.0",
     "vue": "latest",
     "vue-router": "latest",
