--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/seo": "^2.1.1",
     "@unlok-co/nuxt-stripe": "^4.0.2",
     "@vueuse/core": "^12.7.0",
+    "@vueuse/integrations": "^12.7.0",
     "animate.css": "^4.1.1",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
@@ -22,6 +23,7 @@
     "nuxt": "^3.15.4",
     "pinia": "^3.0.1",
     "sass-embedded": "^1.85.0",
+    "universal-cookie": "^7.2.2",
     "vue": "latest",
     "vue-router": "latest",
     "vue-sonner": "^1.3.0",
