--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "mdb-ui-kit": "^8.2.0",
     "nuxt": "^3.15.4",
     "pinia": "^3.0.1",
+    "qrcode": "^1.5.4",
     "sass-embedded": "^1.85.0",
     "universal-cookie": "^7.2.2",
     "vue": "latest",
