Remove django all auth + install missing packages in environment

--- a/mystore/Pipfile
+++ b/mystore/Pipfile
@@ -5,36 +5,41 @@ name = "pypi"
 
 [packages]
 pandas = "*"
-matplotlib = "*"
-djangorestframework = "*"
-django-extensions = "*"
-django-cors-headers = "*"
 django = "*"
 gunicorn = "*"
 stripe = "*"
-django-imagekit = "*"
+matplotlib = "*"
+jwt = "*"
+pyotp = "*"
+unidecode = "*"
+psycopg = {extras = ["pool", "binary"], version = "*"}
+tablib = "*"
 pillow = "*"
+drf-spectacular = "*"
+django-ckeditor-5 = "*"
+python-dotenv = "*"
+djangorestframework = "*"
+markdown = "*"
+django-filter = "*"
+django-cors-headers = "*"
+django-extensions = "*"
+django-imagekit = "*"
 django-axes = "*"
 boto3 = "*"
 django-storages = "*"
 django-debug-toolbar = "*"
 django-redis = "*"
-python-dotenv = "*"
-tablib = "*"
 django-import-export = "*"
-psycopg = {extras = ["binary", "pool"], version = "*"}
-unidecode = "*"
-spacy = "*"
-numpy = "==2.0.2"
-jwt = "*"
-django-allauth = {extras = ["socialaccount"], version = "*"}
-django-ckeditor-5 = "*"
-drf-spectacular = "*"
-markdown = "*"
-pyotp = "*"
+numpy = "*"
+celery = "*"
+firebase-admin = "*"
+rapidfuzz = "*"
+python-levenshtein = "*"
+requests = "*"
+djangorestframework-simplejwt = "*"
 
 [dev-packages]
 autopep8 = "*"
 
 [requires]
-python_version = "3.12"
+python_version = "3.13"
