Remove django all auth traces

--- a/mystore/Pipfile
+++ b/mystore/Pipfile
@@ -38,6 +38,7 @@ python-levenshtein = "*"
 requests = "*"
 djangorestframework-simplejwt = "*"
 thefuzz = "*"
+daphne = "*"
 
 [dev-packages]
 autopep8 = "*"
