--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@iconify-json/fa-solid": "^1.2.1",
     "@nuxt/icon": "^1.12.0",
     "@nuxt/image": "^1.10.0",
     "@nuxt/test-utils": "^3.17.2",
