--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "vue": "latest",
     "vue-router": "latest",
     "vue-sonner": "^1.3.0",
+    "vue-stripe-js": "^2.0.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
