--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@vueuse/math": "^13.1.0",
     "animate.css": "^4.1.1",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "firebase": "^11.6.0",
     "jwt-decode": "^4.0.0",
