--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,5 +56,6 @@
     "shadcn-nuxt": "^2.0.1",
     "tw-animate-css": "^1.2.8",
     "vuetify-nuxt-module": "^0.18.6"
-  }
+  },
+  "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
 }
