--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,11 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "npx vitest run",
+    "test:vi": "npx vitest watch",
+    "test:nuxt": "npx vitest run --project nuxt",
+    "test:unit": "npx vitest run --project unit"
   },
   "dependencies": {
     "@nuxtjs/seo": "^2.2.0",
@@ -52,9 +56,15 @@
     "@nuxtjs/tailwindcss": "^6.13.2",
     "@pinia/nuxt": "^0.10.1",
     "@vesp/nuxt-fontawesome": "^1.2.1",
+    "@vitest/ui": "3.1.3",
+    "@vue/test-utils": "^2.4.6",
     "@vueuse/nuxt": "^12.8.2",
+    "happy-dom": "^17.4.6",
+    "jsdom": "^26.1.0",
+    "playwright-core": "^1.52.0",
     "shadcn-nuxt": "^2.0.1",
     "tw-animate-css": "^1.2.8",
+    "vitest": "^3.1.3",
     "vuetify-nuxt-module": "^0.18.6"
   },
   "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
